--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=ami
-spring.datasource.password=postgres
-#spring.datasource.schema=iRent
-spring.jpa.hibernate.default_schema=irent
+spring.jpa.database=${spring.jpa.database}
+spring.jpa.hibernate.default_schema=${spring.jpa.hibernate.default_schema}
+spring.jpa.hibernate.ddl-auto=${spring.jpa.hibernate.ddl-auto}
+spring.jpa.show-sql=${spring.jpa.show-sql}
+spring.datasource.platform=${spring.datasource.platform}
+spring.database.driverClassName=${spring.database.driverClassName}
+spring.datasource.url=${spring.datasource.url}
+spring.datasource.username=${spring.datasource.username}
+spring.datasource.password=${spring.datasource.password}
