--- a/profiles/prod/application.properties
+++ b/profiles/prod/application.properties
@@ -3,9 +3,9 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=faslse
 spring.jpa.hibernate.ddl-auto=auto
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=postgres://jedakimxhlqtxl:tXyVu4xDMzS-51MQXOvzfbvQbM@ec2-54-83-10-210.compute-1.amazonaws.com:5432/dcch0rb708s51u
-spring.datasource.username=jedakimxhlqtxl
-spring.datasource.password=tXyVu4xDMzS-51MQXOvzfbvQbM
+spring.datasource.url=postgres://srypwypnvfzrbg:JDg0_KNiUEUsr21CIL9ib9oIT2@ec2-54-204-20-164.compute-1.amazonaws.com:5432/d8t2i5itkaq1e6
+spring.datasource.username=srypwypnvfzrbg
+spring.datasource.password=JDg0_KNiUEUsr21CIL9ib9oIT2
 #spring.datasource.schema=iRent
 spring.jpa.hibernate.default_schema=irent
 
