--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,7 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>9.4-1202-jdbc42</version>
+			<scope>provided</scope>
 		</dependency>
 
 
