added jdbc to properties file

--- a/profiles/prod/application.properties
+++ b/profiles/prod/application.properties
@@ -3,7 +3,7 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=faslse
 spring.jpa.hibernate.ddl-auto=auto
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://jtysioficdsoav:S5rdV2WGBfgojMRQNEv7tKZS6t@ec2-54-204-20-164.compute-1.amazonaws.com:5432/d9r3rqvom139fb?username=jtysioficdsoav&password=S5rdV2WGBfgojMRQNEv7tKZS6t&ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.url=jdbc:postgresql://jtysioficdsoav:S5rdV2WGBfgojMRQNEv7tKZS6t@ec2-54-204-20-164.compute-1.amazonaws.com:5432/d9r3rqvom139fb
 spring.datasource.username=jtysioficdsoav
 spring.datasource.password=S5rdV2WGBfgojMRQNEv7tKZS6t
 #spring.datasource.schema=iRent
