--- a/profiles/prod/application.properties
+++ b/profiles/prod/application.properties
@@ -3,9 +3,10 @@ spring.datasource.platform=postgres
 spring.jpa.show-sql=faslse
 spring.jpa.hibernate.ddl-auto=auto
 spring.database.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://jtysioficdsoav:S5rdV2WGBfgojMRQNEv7tKZS6t@ec2-54-204-20-164.compute-1.amazonaws.com:5432/d9r3rqvom139fb
-spring.datasource.username=jtysioficdsoav
-spring.datasource.password=S5rdV2WGBfgojMRQNEv7tKZS6t
+#spring.datasource.url=jdbc:postgresql://ysdrlyqwyvbopn:1uPBMQB0m5Kth776AV4uvxAmXS@ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
+spring.datasource.url=jdbc:postgresql://ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
+spring.datasource.username=ysdrlyqwyvbopn
+spring.datasource.password=1uPBMQB0m5Kth776AV4uvxAmXS
 #spring.datasource.schema=iRent
 spring.jpa.hibernate.default_schema=irent
 #Adding more comments
