made prod active in pom

--- a/profiles/dev/application.properties
+++ b/profiles/dev/application.properties
@@ -8,7 +8,7 @@
 #spring.datasource.password=postgres
 ##spring.datasource.schema=iRent
 #spring.jpa.hibernate.default_schema=irent
-#
+##?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
 #
 #
 #
