--- a/profiles/prod/application.properties
+++ b/profiles/prod/application.properties
@@ -4,7 +4,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.database.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://ysdrlyqwyvbopn:1uPBMQB0m5Kth776AV4uvxAmXS@ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
-spring.datasource.url=jdbc:postgresql://ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
+spring.datasource.url=jdbc:postgresql://ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
 spring.datasource.username=ysdrlyqwyvbopn
 spring.datasource.password=1uPBMQB0m5Kth776AV4uvxAmXS
 #spring.datasource.schema=iRent
