fix jackson json bug and added db controller

--- a/profiles/prod/application.properties
+++ b/profiles/prod/application.properties
@@ -1,7 +1,8 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.database.driverClassName=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://ysdrlyqwyvbopn:1uPBMQB0m5Kth776AV4uvxAmXS@ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
 spring.datasource.url=jdbc:postgresql://ec2-54-83-205-164.compute-1.amazonaws.com:5432/dkm1n4foaja4d
