--- a/profiles/dev/application.properties
+++ b/profiles/dev/application.properties
@@ -1,15 +1,13 @@
-#spring.jpa.database=POSTGRESQL
-#spring.datasource.platform=postgres
-#spring.jpa.show-sql=true
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create-drop
-#spring.database.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username=ami
-#spring.datasource.password=postgres
-##spring.datasource.schema=iRent
-#spring.jpa.hibernate.default_schema=irent
-##?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-#
-#
-#
-#
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=auto
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=ami
+spring.datasource.password=postgres
+#spring.datasource.schema=iRent
+spring.jpa.hibernate.default_schema=irent
+#?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
