--- a/.settings/org.springframework.ide.eclipse.boot.prefs
+++ b/.settings/org.springframework.ide.eclipse.boot.prefs
@@ -1,2 +1,2 @@
 eclipse.preferences.version=1
-spring.boot.launch.profile.history=prod;default;
+spring.boot.launch.profile.history=dev;prod;default;
