--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<!-- The configuration of the production profile -->
 		<profile>
 			<id>prod</id>
-						<!-- The development profile is active by default -->
+			<!-- The development profile is active by default -->
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
@@ -83,7 +83,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		
+
 		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-mongodb</artifactId> 
 			</dependency> -->
 		<dependency>
@@ -92,8 +92,6 @@
 			<version>9.4-1202-jdbc42</version>
 			<scope>provided</scope>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -103,6 +101,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency> <groupId>org.springframework.security</groupId> <artifactId>spring-security-config</artifactId> 
+			<version>3.2.4.RELEASE</version> </dependency> -->
+	<!-- 	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency> -->
 	</dependencies>
 
 </project>
